--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 					</execution>
 					<execution>
 						<id>tag-image</id>
-						<phase>deploy</phase>
+						<phase>install</phase>
 						<goals>
 							<goal>tag</goal>
 						</goals>
@@ -42,7 +42,7 @@
 					</execution>
 					<execution>
 						<id>push-image</id>
-						<phase>deploy</phase>
+						<phase>install</phase>
 						<goals>
 							<goal>push</goal>
 						</goals>
